--- a/popup.html
+++ b/popup.html
@@ -32,6 +32,6 @@
 	<li>分享图片</li>
 	<li>分享截图</li>
 </ul>
-     <script src="js/menu.js"></script>
+     <script src="js/popup.js"></script>
 </body>
 </html>
