--- a/share.html
+++ b/share.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
 	<title>share</title>
+    <script src="js/share.js"></script>
 </head>
 <body>
-
+    
 </body>
 </html>
