--- a/popup.html
+++ b/popup.html
@@ -148,7 +148,7 @@
     </header>
     <div id="menu" class="popup">
       <ul>
-        <li id="btn-share-link" class="button disabled">
+        <li id="btn-share-link" class="button">
           <span class="title">分享当前页面</span>
         </li>
         <li id="pin-all-btn" class="button disabled">
