--- a/share.html
+++ b/share.html
@@ -5,9 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
 	<title>share</title>
+    <script src="js/asset/jquery-2.1.1.min.js"></script>
     <script src="js/share.js"></script>
 </head>
 <body>
-    
+    <div id="container">
+        <input id="ShareToMingdao" type="button" value="Share" />
+
+    </div>
 </body>
 </html>
