--- a/popup.html
+++ b/popup.html
@@ -77,7 +77,7 @@
         line-height: 24px;
         padding-left: 22px;
         font-size: 16px;
-        background: url(/images/logo_16.png) no-repeat left center;
+        background: url(/images/logo.png) no-repeat left center;
       }
       #preferences {
         position: absolute;
