--- a/share.html
+++ b/share.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="board-list">
                   <div class="board-list-body" style="height: 30px;">
-                    <ul><li class="board-category"><span>我的天</span></li></ul>
+                    <ul><li class="board-category"><span>--所有同事--</span></li></ul>
                   </div>
                   <div class="create-board">
                     <input type="text" id="board_name_input" placeholder="创建新画板">
@@ -57,7 +57,7 @@
               </div>
               <div class="create-board-status error mainerror"></div>
               <div class="buttons">
-                <a href="edit.html#" class="btn rbtn">分享</a>
+                <a href="edit.html#" class="btn rbtn"></a>
                 <label for="" class="weibo less" style="display: block;">
                   <input type="checkbox" class="publish_to_weibo">
                   <span>分享给微博粉丝</span>
@@ -80,17 +80,6 @@
             <div id="pin_operations">
               <a id="view_pin" href="">查看这个分享</a>&nbsp;|<a id="close_window" href="edit.html#">关闭窗口</a>
             </div>
-            <ul>
-              <li>
-                <a id="share_sinaweibo" class="share-button btn wbtn" href="edit.html#"><strong>分享到新浪微博</strong><span></span></a>
-              </li>
-              <li>
-                <a id="share_douban" class="share-button btn wbtn" href="edit.html#"><strong>分享到豆瓣</strong><span></span></a>
-              </li>
-              <li>
-                <a id="share_qzone" class="share-button btn wbtn" href="edit.html#"><strong>分享到QQ空间</strong><span></span></a>
-              </li>
-            </ul>
           </div>
         </div>
       </div>
