--- a/edit.html
+++ b/edit.html
@@ -89,9 +89,9 @@
             <div class="box-title">
               <a href="edit.html#" class="close"><i></i></a>
               <div class="text">分享到明道</div>
-              <div id="user_icon" style="display: block;"><a href="http://mingdao.com/uzayg1kh74" target="_blank"><img src="./edit_files/4f73c21c7f1ba5805da90d9928cbdc235f9e30d23d45-Au7CEd_sq75">朱志远-明道</a><span title="移除授权"></span></div>
+              <div id="user_icon" style="display: block;"><a href="http://mingdao.com/uzayg1kh74" target="_blank"><img src="//:0">朱志远-明道</a><span title="移除授权"></span></div>
             </div>
-            <iframe id="share-to-mingdao" src="share.html" FRAMEBORDER="0" width="580" height="300"></iframe>
+            <iframe id="share-to-mingdao" src="about:blank" FRAMEBORDER="0" width="580" height="300"></iframe>
         </div>
     </div>
     <div id="overlay" style="width: 1920px; height: 949px; display: none;"></div>
