是短发散发

--- a/libs/oauth2.html
+++ b/libs/oauth2.html
@@ -17,7 +17,9 @@
 	</style>
 </head>
 <body>
+    <script src="../js/ajax.js"></script>
     <script src="request.js"></script>
+    <script src="../js/mingdao.js"></script>
 	<script src="oauth2.js"></script>
 	<script src="script.js"></script>
 </body>
