--- a/edit.html
+++ b/edit.html
@@ -73,7 +73,7 @@
             <div class="tool-icon save"><i></i>保存到本地</div>
           </li>
           <li id="btn_upload" class="separate">
-            <div class="tool-icon pin"><i></i>分享到明道</div>
+            <div class="tool-icon pin">分享到明道</div>
           </li>
         </ul>
       </div>
