--- a/popup.html
+++ b/popup.html
@@ -160,7 +160,7 @@
         <li id="pin-all-btn" class="button disabled">
           <span class="title">分享图片/视频</span>
         </li>
-        <li id="capture-area-item" class="button capture disabled" style="display:none">
+        <li id="capture-area-item" class="button capture disabled">
           <span class="title">分享区域截图</span>
           <span class="prompt" style="display: none;">Ctrl+Shift+R</span>
         </li>
