--- a/share.html
+++ b/share.html
@@ -26,7 +26,7 @@
                   <div class="board-list-overlay"></div>
                   <div class="board-picker">
                     <div class="current">
-                      <div class="name">我的天</div>
+                      <div class="name">加载中...</div>
                       <div class="down-arrow"></div>
                     </div>
                     <div class="board-list">
