--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
+    <script src="libs/request.js"></script>
     <script src="libs/oauth2.js"></script>
     <script src="libs/doOauth2.js"></script>
     <script>      
