文字修改并且加入忽略文件
我是用webstorm的，所以带了些ws的文件

--- a/share.html
+++ b/share.html
@@ -67,14 +67,14 @@
                   </div>
                 </div>
                 <div id="loading" style="display: none;">
-                  <div class="desc">正在获取授权...</div>
+                  <div class="desc">正在加载，请稍候...</div>
                   <div class="authorising"></div>
                 </div>
                 <div id="authorization" style="display: none;">
                   <div class="desc">
-                    请在明道网上授权
+                    抱歉，您尚未绑定明道账号，点击下面按钮绑定明道账号
                   </div>
-                  <a href="javascript:void(0);" class="btn rbtn" id="auth_btn">获取授权</a>
+                  <a href="javascript:void(0);" class="btn rbtn" id="auth_btn">绑定明道账号</a>
                 </div>
               </div>
               <div id="pin-done" class="pin-done" style="display: none;">
