文字小调整

--- a/share.html
+++ b/share.html
@@ -72,9 +72,9 @@
                 </div>
                 <div id="authorization" style="display: none;">
                   <div class="desc">
-                    抱歉，您尚未绑定明道账号，点击下面按钮绑定明道账号
+                    您尚未绑定明道账号，点击下面按钮绑定明道账号
                   </div>
-                  <a href="javascript:void(0);" class="btn rbtn" id="auth_btn">绑定明道账号</a>
+                  <a href="javascript:void(0);" class="btn rbtn" id="auth_btn">绑定账号</a>
                 </div>
               </div>
               <div id="pin-done" class="pin-done" style="display: none;">
