图标与chrome崩溃处理

--- a/share.html
+++ b/share.html
@@ -48,7 +48,7 @@
                       <input type="hidden" id="url" value="http://www.baidu.com/">
                       <label for="" style="display: none;">描述一下这个分享…</label>
                       <div class="tag-tip" style="display: block;">
-                        <span>通过 #标签# 可以给分享添加标签，方便你更好地整理分享</span>
+                        <span>通过#标签#可以给分享的内容添加标签</span>
                       </div>
                       <div class="tag-prompt" style="display: none;">
                         <span>推荐标签:</span>
