--- a/popup.html
+++ b/popup.html
@@ -148,7 +148,7 @@
 <body>
     <header>
         <img id="logo" src="images/logo.png" style="float:left;" width="24" height="24" />
-        <div id="ext_name">快捷分享-明道</div>
+        <div id="ext_name">快捷分享</div>
         <div style="clear:both;"></div>
     </header>
     <div id="menu" class="popup">
